--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -25,3 +25,17 @@
 #desktop-sidebar {
   background-color: #ECD1C2;
 }
+
+@keyframes abrirEnvelope {
+  0% {
+    transform: rotateX(0deg);
+  }
+  100% {
+    transform: rotateX(-180deg);
+  }
+}
+
+.envelope-abrindo {
+  animation: abrirEnvelope 1s ease-in-out forwards;
+}
+
